--- a/FerretMVC1/pom.xml
+++ b/FerretMVC1/pom.xml
@@ -4,6 +4,18 @@
     <groupId>org.ecn</groupId>
     <artifactId>PGROU_2021</artifactId>
     <version>1.0</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.ecn</groupId>
+            <artifactId>PGROU_2021</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.samtools</groupId>
+            <artifactId>htsjdk</artifactId>
+            <version>2.24.0</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
