--- a/FerretMVC1/pom.xml
+++ b/FerretMVC1/pom.xml
@@ -5,22 +5,37 @@
     <artifactId>PGROU_2021</artifactId>
     <version>1.0</version>
     <dependencies>
+        
         <dependency>
-            <groupId>org.ecn</groupId>
-            <artifactId>PGROU_2021</artifactId>
-            <version>1.0</version>
-        </dependency>
-        <dependency>
+
             <groupId>com.github.samtools</groupId>
             <artifactId>htsjdk</artifactId>
             <version>2.24.0</version>
         </dependency>
     </dependencies>
+    
     <packaging>jar</packaging>
+    
     <properties>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
+
     <name>PGROU_2021</name>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+</build>
 </project>
